--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,9 +11,8 @@
       "128": "assets/icons/icon128.png"
     }
   },
-  "permissions": [],
+  "permissions": ["alarms", "storage"],
   "background": {
     "service_worker": "src/background/index.ts"
-  },
-  "options_page": "src/options/index.html"
+  }
 }
