--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Admin Messages",
+  "name": "Audit AI page",
   "version": "1.0.0",
-  "description": "A Chrome extension to display messages from your organization's admin",
+  "description": "A Chrome extension to audit pages to check prevention from AI scraping",
   "action": {
     "default_popup": "src/popup/index.html",
     "default_icon": {
