--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,5 +13,12 @@
   },
   "background": {
     "service_worker": "src/background/index.ts"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["src/content/index.ts"]
+    }
+  ],
+  "permissions": ["activeTab"]
 }
