--- a/package.json
+++ b/package.json
@@ -7,24 +7,33 @@
     "build": "tsc && vite build",
     "postbuild": "node ./scripts/set-dynamic-url.cjs",
     "preview": "vite preview",
-    "mock-api": "json-server --watch mock-api/db.json --port 3001 --delay 4000"
+    "test": "jest"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.25",
     "@types/chrome": "^0.0.276",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "jest": "^29.7.0",
     "json-server": "^0.17.3",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.2",
     "vite": "^5.4.8"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
+    "fs": "0.0.1-security",
     "jspdf": "^2.5.2",
+    "path": "^0.12.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "ts-node": "^10.9.2",
+    "url": "^0.11.4"
   }
 }
