--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "vite": "^5.4.8"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.13",
+    "@langchain/openai": "^0.3.11",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "fs": "0.0.1-security",
