--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
     "fs": "0.0.1-security",
-    "jspdf": "^2.5.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
